import { it, expect } from "vitest";
import { render } from "@testing-library/react";

import { setMedia } from "mock-match-media";
import { sizes } from "./sizes.util";

import App from "../App";

const inline = new Set(["</b>", "</span>"]);

const prettify = (input: string) =>
  input
    .replace(/<[^/>]*>/g, ``) // opening tag
    .replace(/<\/[^>]*>/g, (match) => (inline.has(match) ? ` ` : `\n\n`)) // closing tag
    .replace(/\n\n+/g, "\n\n")
    .replace(/ +/g, " ")
    .replace(/&lt;/g, "<")
    .replace(/&gt;/g, ">");

const wait = (ms: number) => new Promise((res) => setTimeout(res, ms));

it.each(sizes)("Should render in SSR %width x %height", async (size) => {
  setMedia({
    width: size.width,
    height: size.height,
  });

  await wait(20);

  expect(prettify(render(App).baseElement.outerHTML)).toMatchSnapshot();

  await wait(20);
});
