// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should render in SSR %width x %height { width: 500, height: 300 } 1`] = `
"
 

<Only>

Only visible for extra small devices (portrait phones)

Only visible for large or less ([0, 1200px])

Custom component

xs

Only visible for extra small devices (portrait phones)

useMediaRange()

isXs: true

isXsDown: true

isXsUp: true

isSm: false

isSmDown: true

isSmUp: false

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: true

isThinDown: true

isThinUp: true

isNormal: false

isNormalDown: true

isNormalUp: false

isBig: false

isBigDown: true

isBigUp: false

"
`;

exports[`Should render in SSR %width x %height { width: 750, height: 550 } 1`] = `
"
 

<Only>

Only visible for extra small devices (portrait phones)

Only visible for large or less ([0, 1200px])

Custom component

xs

Only visible for extra small devices (portrait phones)

useMediaRange()

isXs: true

isXsDown: true

isXsUp: true

isSm: false

isSmDown: true

isSmUp: false

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: true

isThinDown: true

isThinUp: true

isNormal: false

isNormalDown: true

isNormalUp: false

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for small devices (landscape phones)

Only visible for small AND extra large devices

Only visible for small and more ([576px, Infinity[)

Only visible for large or less ([0, 1200px])

Custom component

sm

Only visible for small devices (landscape phones)

sm xl

Only visible for small AND extra large devices

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: true

isSmDown: true

isSmUp: true

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

"
`;

exports[`Should render in SSR %width x %height { width: 900, height: 700 } 1`] = `
"
 

<Only>

Only visible for extra small devices (portrait phones)

Only visible for large or less ([0, 1200px])

Custom component

xs

Only visible for extra small devices (portrait phones)

useMediaRange()

isXs: true

isXsDown: true

isXsUp: true

isSm: false

isSmDown: true

isSmUp: false

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: true

isThinDown: true

isThinUp: true

isNormal: false

isNormalDown: true

isNormalUp: false

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for small devices (landscape phones)

Only visible for small AND extra large devices

Only visible for small and more ([576px, Infinity[)

Only visible for large or less ([0, 1200px])

Custom component

sm

Only visible for small devices (landscape phones)

sm xl

Only visible for small AND extra large devices

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: true

isSmDown: true

isSmUp: true

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for medium devices (tablets)

Only visible for small and more ([576px, Infinity[)

Only visible for large or less ([0, 1200px])

Custom component

md

Only visible for medium devices (tablets)

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: true

isMdDown: true

isMdUp: true

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

"
`;

exports[`Should render in SSR %width x %height { width: 1000, height: 800 } 1`] = `
"
 

<Only>

Only visible for extra small devices (portrait phones)

Only visible for large or less ([0, 1200px])

Custom component

xs

Only visible for extra small devices (portrait phones)

useMediaRange()

isXs: true

isXsDown: true

isXsUp: true

isSm: false

isSmDown: true

isSmUp: false

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: true

isThinDown: true

isThinUp: true

isNormal: false

isNormalDown: true

isNormalUp: false

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for small devices (landscape phones)

Only visible for small AND extra large devices

Only visible for small and more ([576px, Infinity[)

Only visible for large or less ([0, 1200px])

Custom component

sm

Only visible for small devices (landscape phones)

sm xl

Only visible for small AND extra large devices

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: true

isSmDown: true

isSmUp: true

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for medium devices (tablets)

Only visible for small and more ([576px, Infinity[)

Only visible for large or less ([0, 1200px])

Custom component

md

Only visible for medium devices (tablets)

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: true

isMdDown: true

isMdUp: true

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for large devices (desktops)

Only visible for small and more ([576px, Infinity[)

Only visible for large or less ([0, 1200px])

Custom component

lg

Only visible for large devices (desktops)

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: true

isLgDown: true

isLgUp: true

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

"
`;

exports[`Should render in SSR %width x %height { width: 1300, height: 1100 } 1`] = `
"
 

<Only>

Only visible for extra small devices (portrait phones)

Only visible for large or less ([0, 1200px])

Custom component

xs

Only visible for extra small devices (portrait phones)

useMediaRange()

isXs: true

isXsDown: true

isXsUp: true

isSm: false

isSmDown: true

isSmUp: false

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: true

isThinDown: true

isThinUp: true

isNormal: false

isNormalDown: true

isNormalUp: false

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for small devices (landscape phones)

Only visible for small AND extra large devices

Only visible for small and more ([576px, Infinity[)

Only visible for large or less ([0, 1200px])

Custom component

sm

Only visible for small devices (landscape phones)

sm xl

Only visible for small AND extra large devices

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: true

isSmDown: true

isSmUp: true

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for medium devices (tablets)

Only visible for small and more ([576px, Infinity[)

Only visible for large or less ([0, 1200px])

Custom component

md

Only visible for medium devices (tablets)

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: true

isMdDown: true

isMdUp: true

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for large devices (desktops)

Only visible for small and more ([576px, Infinity[)

Only visible for large or less ([0, 1200px])

Custom component

lg

Only visible for large devices (desktops)

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: true

isLgDown: true

isLgUp: true

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

<Only>

Only visible for extra large devices (large desktops)

Only visible for small AND extra large devices

Only visible for small and more ([576px, Infinity[)

Custom component

xl

Only visible for extra large devices (large desktops)

sm xl

Only visible for small AND extra large devices

useMediaRange()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: false

isLgDown: false

isLgUp: true

isXl: true

isXlDown: true

isXlUp: true

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong media range: false

wrong media query: false

empty media query: true

(max-width:0): false

all: true

useMediaRange() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: false

isNormalDown: false

isNormalUp: true

isBig: true

isBigDown: true

isBigUp: true

"
`;
